Center title of movie recommendations fix layout issues with search results and recommendations

--- a/assets/style.css
+++ b/assets/style.css
@@ -128,6 +128,11 @@ body {
   -webkit-text-stroke-color: #e8ffcd;
 }
 
+#recommendationHeading {
+  color: white;
+  text-align: center;
+}
+
 #recommendedMovies ul,
 #searchResults ul {
   display: flex;
